@@ -1,5 +1,7 @@
 package com.construction_worker_forum_back.service;
 
+import com.construction_worker_forum_back.client.NotificationClient;
+import com.construction_worker_forum_back.model.Notification;
 import com.construction_worker_forum_back.model.dto.PostDto;
 import com.construction_worker_forum_back.model.dto.PostRequestDto;
 import com.construction_worker_forum_back.model.dto.TopicDto;
@@ -30,8 +32,7 @@ import javax.transaction.Transactional;
 import java.time.Instant;
 import java.util.*;
 
-import static java.util.stream.Collectors.toList;
-
+@Slf4j
 @Service
 @AllArgsConstructor
 @Slf4j
@@ -42,6 +43,7 @@ public class PostService {
     private final UserService userService;
     private final TopicService topicService;
     private final ModelMapper modelMapper;
+    private final NotificationClient notificationClient;
 
     public List<PostDto> getAllPosts() {
         return postRepository
@@ -184,6 +186,19 @@ public class PostService {
         postFromDb.getLikers().add(userById);
         userById.getLikedPosts().add(postFromDb);
 
+        notificationClient.sendNotification(
+                        Notification.of(
+                                userById.getUsername(),
+                                postFromDb.getUser().getId().toString(),
+                                "Liked yor post!",
+                                "/post/" + postFromDb.getId(),
+                                false
+                        )
+                )
+                .doOnNext(notification -> log.info("Notification Response: {}", notification))
+                .doOnError(e -> log.info("Error occurred: {}", e.getMessage()))
+                .subscribe();
+
         return modelMapper.map(postFromDb, PostDto.class);
     }
 
@@ -251,13 +266,13 @@ public class PostService {
         return postRepository.findAllPaginatedByTopic_Id(topicId, pageable)
                 .stream()
                 .map(post -> modelMapper.map(post, PostDto.class))
-                .collect(toList());
+                .toList();
     }
 
     public List<PostDto> getPaginatedAndSortedNumberOfPosts(Long topicId, Integer number, Integer page, String orderBy) {
-        String[] splitted = orderBy.split("\\.");
-        String sortBy = splitted[0];
-        String direction = splitted[1];
+        String[] split = orderBy.split("\\.");
+        String sortBy = split[0];
+        String direction = split[1];
 
         if (direction.equalsIgnoreCase("asc")) {
             Pageable paginatedAndSortedAscending = PageRequest.of(page - 1, number, Sort.by(sortBy).ascending());
@@ -272,7 +287,7 @@ public class PostService {
         LinkedHashSet<Post> sortedPosts = new LinkedHashSet<>();
         for (Post post : posts) {
             List<String> postKeywords = post.getKeywords().stream().map(Keyword::getName).toList();
-            if (postKeywords.containsAll(keywords)) {
+            if (new HashSet<>(postKeywords).containsAll(keywords)) {
                 sortedPosts.add(post);
             }
         }
@@ -304,10 +319,10 @@ public class PostService {
 
     public List<PostDto> getPaginatedAndSortedAndFilteredPosts(Long topicId, Integer limit, Integer page, String orderBy, List<String> keywords) {
         List<Post> posts;
-        String[] splitted = orderBy.split("\\.");
+        String[] split = orderBy.split("\\.");
 
-        String sortBy = splitted[0];
-        String direction = splitted[1];
+        String sortBy = split[0];
+        String direction = split[1];
 
         if (direction.equalsIgnoreCase("asc")) {
             Sort sortTopicsAscending = Sort.by(Sort.Direction.ASC, sortBy);
